# CmbstEngine-CMake

./: CMakeLists.txt
include/: CMakeLists.txt  cmbst_game_object.hpp  cmbst_renderer.hpp  cmbst_swap_chain.hpp  first_app.hpp  simple_render_system.hpp
shaders/: compile.bat  simple_shader.frag  simple_shader.vert
src/: cmbst_renderer.cpp  cmbst_swap_chain.cpp  first_app.cpp  simple_render_system.cpp
